ARROW-4213: [Flight] Fix incompatibilities between C++ and Java

I'm willing to update the patches here in case you want to resolve incompatibilities differently. The changes are:

- In C++, send/read the schema as the first message in a DoGet stream.
- In Java, encode the GetFlightInfo schema in a Flatbuffer Message payload.
- In C++, skip null columns when encoding IpcPayload.
- In C++, don't write the body tag when encoding IpcPayload if no buffers are present.
- In Java, always align buffers when serializing record batches.

Additionally:
- Add integration tests for Flight. They will fail when trying to test record batches with dictionaries, but otherwise pass.
- Generate an uberjar for Flight, and include Apache Commons CLI and gRPC in the uberjar.
- Explicitly add the generated gRPC/Protobuf sources to the Java build - for some reason, Maven was not picking them up.
- In Java FlightClient, if there's an exception, use it to resolve the VectorSchemaRoot CompletableFuture so that clients do not hang forever.

Author: David Li <David.M.Li@twosigma.com>
Author: Wes McKinney <wesm+git@apache.org>

Closes #3477 from lihalite/arrow-4213 and squashes the following commits:

d5a3ebf6d <Wes McKinney> Fix comment re: flight integration testing procedure
ac337a279 <David Li> Update description of integration test client
f8679593f <David Li> Fix Flake8 errors
8c7be8647 <David Li> clang-format new code
142b97d0a <David Li> Allow integration test script to control Flight port
3aace90ea <David Li> Properly wait for Flight integration test server to start
0d0a476fb <David Li> Clean up style issues
4c8348574 <David Li> Collect failures at end of integration tests
0f3cce426 <David Li> Always align buffers when writing record batches in Flight
3c057dfaa <David Li> Implement Java server side of Flight integration tests
13c0700f9 <David Li> Set exception on root in FlightClient
4801257e5 <David Li> Assume schema in Flight GetInfo is encoded in a Message payload
321f8986d <David Li> Include gRPC in Flight uberjar
d23a2010a <David Li> Explicitly compile generated Protobuf sources for Flight
6885d34ec <David Li> Don't write body tag when serializing IpcPayload if no buffers
92c4c139b <David Li> Skeleton of integration test server for Flight
9bf85255e <David Li> Fix segfault in Flight when sending nullary columns
aca752ba9 <David Li> Read schemas from stream in Flight DoGet
2acc8be97 <David Li> Implement arrow::ipc::ReadSchema that works with a Message