cpp/src/arrow/ipc/writer.h
@@ -30,6 +30,7 @@
 namespace arrow {
 
 class Buffer;
+class DictionaryMemo;
 class MemoryPool;
 class RecordBatch;
 class Schema;
@@ -312,6 +313,17 @@ struct IpcPayload {
 ARROW_EXPORT
 Status GetDictionaryPayloads(const Schema& schema,
                              std::vector<std::unique_ptr<IpcPayload>>* out);
+
+/// \brief Compute IpcPayload for the given schema
+/// \param[in] schema the Schema that is being serialized
+/// \param[in,out] pool for any required temporary memory allocations
+/// \param[in,out] dictionary_memo class for tracking dictionaries and assigning
+/// dictionary ids
+/// \param[out] out the returned IpcPayload
+/// \return Status
+ARROW_EXPORT
+Status GetSchemaPayload(const Schema& schema, MemoryPool* pool,
+                        DictionaryMemo* dictionary_memo, IpcPayload* out);
 
 /// \brief Compute IpcPayload for the given record batch
 /// \param[in] batch the RecordBatch that is being serialized
